--- a/examples/webstack/config/lighttpd-fcgi.conf
+++ b/examples/webstack/config/lighttpd-fcgi.conf
@@ -1,7 +1,7 @@
 server.document-root = "public"
 server.port = 3333
 server.modules = (
-  "mod_scgi",
+  "mod_fastcgi",
   "mod_accesslog",
   "mod_status",
   "mod_staticfile"
@@ -25,17 +25,17 @@ debug.log-response-header  = "enable"
 debug.log-request-handling = "enable"
 debug.log-file-not-found   = "enable"
 
-static-file.exclude-extensions = ( ".rb", ".scgi" )
+static-file.exclude-extensions = ( ".rb", ".fcgi" )
 
-# Mount the Sinatra app on '/'
-scgi.server = (
+# Mount the Sinatra app on '/app'
+fastcgi.server = (
   "/" => ((
       "host" => "127.0.0.1",
       "port" => 3000,
       "check-local" => "disable",
 )))
 
-scgi.debug = 1
+fastcgi.debug = 1
 
 # These won't work with app mounted on "/".
 # Need to change the .jmx file before moving maglev to "/app".
