WIP: make app mountable

--- a/examples/webstack/config/lighttpd-fcgi.conf
+++ b/examples/webstack/config/lighttpd-fcgi.conf
@@ -27,9 +27,8 @@ debug.log-file-not-found   = "enable"
 
 static-file.exclude-extensions = ( ".rb", ".fcgi" )
 
-# Mount the Sinatra app on '/app'
 fastcgi.server = (
-  "/" => ((
+  "/app" => ((
       "host" => "127.0.0.1",
       "port" => 3000,
       "check-local" => "disable",
@@ -38,7 +37,5 @@ fastcgi.server = (
 fastcgi.debug = 1
 
 # These won't work with app mounted on "/".
-# Need to change the .jmx file before moving maglev to "/app".
-#
-# status.status-url = "/server-status"
-# status.statistics-url = "/server-stats"
+status.status-url     = "/server-status"
+status.statistics-url = "/server-stats"
