--- a/examples/webstack/config/lighttpd-multi-scgi.conf
+++ b/examples/webstack/config/lighttpd-multi-scgi.conf
@@ -20,23 +20,22 @@ mimetype.assign = (
   ".png"  => "image/png"
 )
 
-debug.log-request-header   = "enable"
-debug.log-response-header  = "enable"
+# debug.log-request-header   = "enable"
+# debug.log-response-header  = "enable"
 debug.log-request-handling = "enable"
-debug.log-file-not-found   = "enable"
+# debug.log-file-not-found   = "enable"
 
 static-file.exclude-extensions = ( ".rb", ".scgi" )
 
 # Mount the Sinatra app on '/'
 scgi.server = (
-  "/app" => ((
-      "host" => "127.0.0.1",
-      "port" => 3000,
-      "check-local" => "disable",
-)))
+  "/app" => (
+    ("host" => "127.0.0.1", "port" => 3000, "check-local" => "disable"),
+    ("host" => "127.0.0.1", "port" => 3001, "check-local" => "disable")
+  ))
 
 scgi.debug = 1
 
 # These won't work with app mounted on "/".
-status.status-url = "/server-status"
+status.status-url     = "/server-status"
 status.statistics-url = "/server-stats"
