--- a/examples/webstack/config/lighttpd-fcgi-1.conf
+++ b/examples/webstack/config/lighttpd-fcgi-1.conf
@@ -1,7 +1,7 @@
 server.document-root = "public"
 server.port = 3333
 server.modules = (
-  "mod_scgi",
+  "mod_fastcgi",
   "mod_accesslog",
   "mod_status",
   "mod_staticfile"
@@ -10,8 +10,10 @@ server.modules = (
 # Supposedly needed on OSX:
 #server.event-handler = "freebsd-kqueue"
 
-server.errorlog = "log/error.log"
-accesslog.filename = "log/access.log"
+# Put all log files and lighttpd.pid into log dir
+server.pid-file    = var.CWD + "/log/lighttpd.pid"
+server.errorlog    = var.CWD + "/log/error.log"
+accesslog.filename = var.CWD + "/log/access.log"
 
 mimetype.assign = (
   ".html" => "text/html",
@@ -25,18 +27,17 @@ debug.log-response-header  = "enable"
 debug.log-request-handling = "enable"
 debug.log-file-not-found   = "enable"
 
-static-file.exclude-extensions = ( ".rb", ".scgi" )
+static-file.exclude-extensions = ( ".rb", ".fcgi" )
 
-# Mount the Sinatra app on '/'
-scgi.server = (
+fastcgi.server = (
   "/app" => ((
       "host" => "127.0.0.1",
       "port" => 3000,
       "check-local" => "disable",
 )))
 
-scgi.debug = 1
+fastcgi.debug = 1
 
 # These won't work with app mounted on "/".
-status.status-url = "/server-status"
+status.status-url     = "/server-status"
 status.statistics-url = "/server-stats"
