--- a/examples/webstack/config/lighttpd-scgi-1.conf
+++ b/examples/webstack/config/lighttpd-scgi-1.conf
@@ -4,37 +4,35 @@ server.modules = (
   "mod_scgi",
   "mod_accesslog",
   "mod_status",
-  "mod_staticfile"
-)
+  "mod_staticfile")
 
 # Supposedly needed on OSX:
 #server.event-handler = "freebsd-kqueue"
 
-server.errorlog = "log/error.log"
-accesslog.filename = "log/access.log"
+# Put all log files and lighttpd.pid into log dir
+server.pid-file    = var.CWD + "/log/lighttpd.pid"
+server.errorlog    = var.CWD + "/log/error.log"
+accesslog.filename = var.CWD + "/log/access.log"
 
 mimetype.assign = (
   ".html" => "text/html",
   ".txt"  => "text/plain",
   ".jpg"  => "image/jpeg",
-  ".png"  => "image/png"
-)
+  ".png"  => "image/png")
 
 # debug.log-request-header   = "enable"
 # debug.log-response-header  = "enable"
-debug.log-request-handling = "enable"
+# debug.log-request-handling = "enable"
 # debug.log-file-not-found   = "enable"
 
 static-file.exclude-extensions = ( ".rb", ".scgi" )
 
-# Mount the Sinatra app on '/'
+# Mount the Sinatra app on '/app'
 scgi.server = (
   "/app" => (
-    ("host" => "127.0.0.1", "port" => 3000, "check-local" => "disable"),
-    ("host" => "127.0.0.1", "port" => 3001, "check-local" => "disable")
-  ))
+    ("host" => "127.0.0.1", "port" => 3000, "check-local" => "disable")))
 
-scgi.debug = 1
+# scgi.debug = 1
 
 # These won't work with app mounted on "/".
 status.status-url     = "/server-status"
