--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -336,6 +336,10 @@ Trac787.rb
 Trac788.rb
 Trac790.rb
 Trac795.rb
+Trac798.rb
+Trac799.rb
+Trac802.rb
+Trac804.rb
 testMarshal.rb   # after other coverage of Hash
 #
 # PopularApplications loads webrick, etc
