--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -339,6 +339,7 @@ Trac795.rb
 Trac798.rb
 Trac799.rb
 Trac802.rb
+Trac803.rb
 # Trac804.rb  runs by it self but gets bind errors after others run in same VM
 testMarshal.rb   # after other coverage of Hash
 #
