--- a/examples/persistence/mdb/mdb/Rakefile
+++ b/examples/persistence/mdb/mdb/Rakefile
@@ -1,5 +1,10 @@
 task :default => :commit
 
+# We may be running under RVM, so define a way to check
+def maglev_using_rvm
+  ENV['rvm_path'] != "" && (/^maglev/ =~ ENV['rvm_ruby_string']) == 0
+end
+
 ENV['MAGLEV_OPTS'] = '-Ilib'
 
 desc "Commit the MDB Server code to the repository."
@@ -54,7 +59,16 @@ end
 namespace :server do
   desc "Start the mdb_server app"
   task :start => :commit do
-    sh %{ MAGLEV_OPTS='-d' $MAGLEV_HOME/bin/rackup --port 4567 --server webrick config.ru }
+    # rackup can be in different places, need to find the correct one
+    rackup_exe = maglev_using_rvm ? \
+      "#{ENV['BUNDLE_PATH']}/bin/rackup" : "#{ENV['MAGLEV_HOME']}/bin/rackup"
+    if File.exists?("#{rackup_exe}")
+      sh %{ MAGLEV_OPTS='-d' #{rackup_exe} --port 4567 --server webrick config.ru }
+    else
+      puts "[Error] missing file #{rackup_exe}"
+      puts "To fix this, make sure rack is properly installed."
+      exit 1
+    end
   end
 
   desc "List the databases in the server"
