Fix Trac 808, 811, more coverage for DefineMethod test

--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -41,6 +41,7 @@ class_vars.rb
 classes_simple.rb
 RubyContextTest.rb
 DefineMethod.rb
+DefineMethod_a.rb
 NamespaceTest.rb
 CaseTest.rb
 #  RP not biasing line numbers yet because using byte offsets...
@@ -337,10 +338,13 @@ Trac788.rb
 Trac790.rb
 Trac795.rb
 Trac798.rb
-Trac799.rb
+Trac799.rb 
 Trac802.rb
 Trac803.rb
 # Trac804.rb  runs by it self but gets bind errors after others run in same VM
+# 805 covered in Trac799.rb
+Trac808.rb
+Trac811.rb
 testMarshal.rb   # after other coverage of Hash
 #
 # PopularApplications loads webrick, etc
