--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -345,6 +345,8 @@ Trac803.rb
 # 805 covered in Trac799.rb
 Trac808.rb
 Trac811.rb
+Trac811a.rb
+Trac814.rb
 testMarshal.rb   # after other coverage of Hash
 #
 # PopularApplications loads webrick, etc
