--- a/examples/webstack/config/lighttpd-fcgi-4.conf
+++ b/examples/webstack/config/lighttpd-fcgi-4.conf
@@ -7,9 +7,6 @@ server.modules = (
   "mod_staticfile"
 )
 
-# Supposedly needed on OSX:
-#server.event-handler = "freebsd-kqueue"
-
 # Put all log files and lighttpd.pid into log dir
 server.pid-file    = var.CWD + "/log/lighttpd.pid"
 server.errorlog    = var.CWD + "/log/error.log"
@@ -22,10 +19,10 @@ mimetype.assign = (
   ".png"  => "image/png"
 )
 
-debug.log-request-header   = "enable"
-debug.log-response-header  = "enable"
-debug.log-request-handling = "enable"
-debug.log-file-not-found   = "enable"
+# debug.log-request-header   = "enable"
+# debug.log-response-header  = "enable"
+# debug.log-request-handling = "enable"
+# debug.log-file-not-found   = "enable"
 
 static-file.exclude-extensions = ( ".rb", ".fcgi" )
 
@@ -39,5 +36,5 @@ fastcgi.server = (
 # fastcgi.debug = 1
 
 # These won't work with app mounted on "/".
-status.status-url     = "/server-status"
-status.statistics-url = "/server-stats"
+# status.status-url     = "/server-status"
+# status.statistics-url = "/server-stats"
