--- a/examples/webstack/config/lighttpd-scgi-2.conf
+++ b/examples/webstack/config/lighttpd-scgi-2.conf
@@ -6,9 +6,6 @@ server.modules = (
   "mod_status",
   "mod_staticfile")
 
-# Supposedly needed on OSX:
-#server.event-handler = "freebsd-kqueue"
-
 # Put all log files and lighttpd.pid into log dir
 server.pid-file    = var.CWD + "/log/lighttpd.pid"
 server.errorlog    = var.CWD + "/log/error.log"
@@ -36,5 +33,5 @@ scgi.server = (
 # scgi.debug = 1
 
 # These won't work with app mounted on "/".
-status.status-url     = "/server-status"
-status.statistics-url = "/server-stats"
+# status.status-url     = "/server-status"
+# status.statistics-url = "/server-stats"
