--- a/examples/webstack/config/lighttpd-http-4.conf
+++ b/examples/webstack/config/lighttpd-http-4.conf
@@ -1,10 +1,11 @@
 server.document-root = "public"
 server.port = 3333
 server.modules = (
-  "mod_scgi",
+  "mod_proxy",
   "mod_accesslog",
   "mod_status",
-  "mod_staticfile")
+  "mod_staticfile"
+)
 
 # Put all log files and lighttpd.pid into log dir
 server.pid-file    = var.CWD + "/log/lighttpd.pid"
@@ -15,24 +16,24 @@ mimetype.assign = (
   ".html" => "text/html",
   ".txt"  => "text/plain",
   ".jpg"  => "image/jpeg",
-  ".png"  => "image/png")
+  ".png"  => "image/png"
+)
 
 # debug.log-request-header   = "enable"
 # debug.log-response-header  = "enable"
 # debug.log-request-handling = "enable"
 # debug.log-file-not-found   = "enable"
 
-static-file.exclude-extensions = ( ".rb", ".scgi" )
+static-file.exclude-extensions = ( ".rb", ".fcgi" )
 
-# Mount the Sinatra app on '/app'
-scgi.server = (
+proxy.server = (
   "/app" => (
     ("host" => "127.0.0.1", "port" => 3000, "check-local" => "disable"),
     ("host" => "127.0.0.1", "port" => 3001, "check-local" => "disable"),
     ("host" => "127.0.0.1", "port" => 3002, "check-local" => "disable"),
     ("host" => "127.0.0.1", "port" => 3003, "check-local" => "disable")))
 
-# scgi.debug = 1
+# fastcgi.debug = 1
 
 # These won't work with app mounted on "/".
 # status.status-url     = "/server-status"
