--- a/examples/webstack/config/lighttpd-scgi-1.conf
+++ b/examples/webstack/config/lighttpd-scgi-1.conf
@@ -6,9 +6,6 @@ server.modules = (
   "mod_status",
   "mod_staticfile")
 
-# Supposedly needed on OSX:
-#server.event-handler = "freebsd-kqueue"
-
 # Put all log files and lighttpd.pid into log dir
 server.pid-file    = var.CWD + "/log/lighttpd.pid"
 server.errorlog    = var.CWD + "/log/error.log"
@@ -29,11 +26,10 @@ static-file.exclude-extensions = ( ".rb", ".scgi" )
 
 # Mount the Sinatra app on '/app'
 scgi.server = (
-  "/app" => (
-    ("host" => "127.0.0.1", "port" => 3000, "check-local" => "disable")))
+  "/app" => (("host" => "127.0.0.1", "port" => 3000, "check-local" => "disable")))
 
 # scgi.debug = 1
 
 # These won't work with app mounted on "/".
-status.status-url     = "/server-status"
-status.statistics-url = "/server-stats"
+# status.status-url     = "/server-status"
+# status.statistics-url = "/server-stats"
