more fixes for Trac 818

--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -347,6 +347,7 @@ Trac808.rb
 Trac811.rb
 Trac811a.rb
 Trac814.rb
+Trac818.rb
 testMarshal.rb   # after other coverage of Hash
 #
 # PopularApplications loads webrick, etc
