--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -348,6 +348,7 @@ Trac811.rb
 Trac811a.rb
 Trac814.rb
 Trac818.rb
+Trac822.rb
 testMarshal.rb   # after other coverage of Hash
 #
 # PopularApplications loads webrick, etc
