Added Trac823.rb to vmunit.conf

--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -349,6 +349,7 @@ Trac811a.rb
 Trac814.rb
 Trac818.rb
 Trac822.rb
+Trac823.rb
 testMarshal.rb   # after other coverage of Hash
 #
 # PopularApplications loads webrick, etc
