--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -350,6 +350,7 @@ Trac814.rb
 Trac818.rb
 Trac822.rb
 Trac823.rb
+Trac827.rb
 testMarshal.rb   # after other coverage of Hash
 #
 # PopularApplications loads webrick, etc
