--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -351,6 +351,7 @@ Trac818.rb
 Trac822.rb
 Trac823.rb
 Trac827.rb
+Trac830.rb
 testMarshal.rb   # after other coverage of Hash
 #
 # PopularApplications loads webrick, etc
