Add new tests; fix 830 to be silent

--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -196,6 +196,7 @@ Trac462.rb
 Trac463.rb
 Trac464.rb
 Trac465.rb
+# Trac783.rb  # run earlier in the Test::Unit section
 Trac484.rb
 Trac486.rb
 Trac491.rb
@@ -278,6 +279,7 @@ Trac677.rb
 # Trac677b.rb  loaded by Trac677.rb
 Trac678.rb
 Trac679.rb
+# Trac680.rb  # run earlier in the Test::Unit section
 Trac685.rb
 Trac686.rb
 Trac690.rb
@@ -302,12 +304,14 @@ Trac720.rb
 Trac721.rb
 Trac721b.rb
 Trac721c.rb
+# Trac726.rb  # run earlier in the Test::Unit section
 Trac726b.rb
 Trac727.rb
 Trac728.rb
 Trac738.rb
 Trac740.rb
 Trac743.rb
+# Trac745.rb  # at end of file
 Trac747.rb
 Trac748.rb
 Trac749.rb
@@ -338,7 +342,7 @@ Trac788.rb
 Trac790.rb
 Trac795.rb
 Trac798.rb
-Trac799.rb 
+Trac799.rb
 Trac802.rb
 Trac803.rb
 # Trac804.rb  runs by it self but gets bind errors after others run in same VM
@@ -352,6 +356,7 @@ Trac822.rb
 Trac823.rb
 Trac827.rb
 Trac830.rb
+Trac833.rb
 testMarshal.rb   # after other coverage of Hash
 #
 # PopularApplications loads webrick, etc
