--- a/examples/rails/Rakefile
+++ b/examples/rails/Rakefile
@@ -49,7 +49,7 @@ namespace :patch do
     patch_info = {
       "activesupport-3.0.0" => ['activesupport_class_patch.diff',
                                 'activesupport_time_zone_patch.diff',
-                                'activesupport_descendents_tracker_patch.diff']
+                                'activesupport_descendents_tracker_patch.diff'],
       "activesupport-3.0.3" => ['activesupport_class_patch.diff',
                                 'activesupport_time_zone_patch.diff',
                                 'activesupport_descendents_tracker_patch.diff']
