Made the .gitignore for the gems dir a whitelist that sees rake and bundler.

--- a/lib/maglev/gems/1.8/.gitignore
+++ b/lib/maglev/gems/1.8/.gitignore
@@ -1,1 +1,10 @@
 doc/
+specifications
+!specifications/bundler-1.0.7.gemspec
+!specifications/rake-0.8.7.gemspec
+
+gems/
+!gems/bundler-1.0.7
+!gems/rake-0.8.7
+
+cache/
