--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,25 +1,14 @@
-htmldiff
-ldiff
-rackup
-rubyforge
-sow
-*_json.rb
-haml
-html2haml
-sass
-haml
-css2sass
-use_minitest
-autospec
-cdiff
-decolor
-spec
-erubis
-memcached_top
-rails
-rake2thor
-thor
-cucumber
-tt
-mustache
-ramaze
+*
+!bundle
+!erb
+!maglev
+!maglev-gem
+!maglev-irb
+!maglev-ruby
+!rake
+!rdoc
+!ri
+!rvm-rake
+!testrb
+!topaz-irb
+!update_rubygems
