--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -357,6 +357,7 @@ Trac823.rb
 Trac827.rb
 Trac830.rb
 Trac833.rb
+Trac834.rb
 testMarshal.rb   # after other coverage of Hash
 #
 # PopularApplications loads webrick, etc
