--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -358,6 +358,7 @@ Trac827.rb
 Trac830.rb
 Trac833.rb
 Trac834.rb
+Trac843.rb
 testMarshal.rb   # after other coverage of Hash
 #
 # PopularApplications loads webrick, etc
