--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -359,6 +359,7 @@ Trac830.rb
 Trac833.rb
 Trac834.rb
 Trac843.rb
+Trac848.rb
 testMarshal.rb   # after other coverage of Hash
 #
 # PopularApplications loads webrick, etc
