--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -360,6 +360,7 @@ Trac833.rb
 Trac834.rb
 Trac843.rb
 Trac848.rb
+Trac850.rb
 testMarshal.rb   # after other coverage of Hash
 #
 # PopularApplications loads webrick, etc
