--- a/examples/rails/myapp/Gemfile
+++ b/examples/rails/myapp/Gemfile
@@ -13,8 +13,9 @@ gem 'ruby-mysql', :require => 'mysql'
 # Deploy with Capistrano
 # gem 'capistrano'
 
-# To use debugger
+# To use debugger (ruby-debug for Ruby 1.8.7+, ruby-debug19 for Ruby 1.9.2+)
 # gem 'ruby-debug'
+# gem 'ruby-debug19'
 
 # Bundle the extra gems:
 # gem 'bj'
