--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -361,6 +361,7 @@ Trac834.rb
 Trac843.rb
 Trac848.rb
 Trac850.rb
+Trac857.rb
 testMarshal.rb   # after other coverage of Hash
 #
 # PopularApplications loads webrick, etc
