--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -362,6 +362,7 @@ Trac843.rb
 Trac848.rb
 Trac850.rb
 Trac857.rb
+Trac860.rb
 testMarshal.rb   # after other coverage of Hash
 #
 # PopularApplications loads webrick, etc
