--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -366,6 +366,7 @@ Trac857.rb
 Trac860.rb
 Trac861.rb
 Trac862.rb
+Trac871.rb
 testMarshal.rb   # after other coverage of Hash
 #
 # PopularApplications loads webrick, etc
