--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -367,6 +367,7 @@ Trac860.rb
 Trac861.rb
 Trac862.rb
 Trac871.rb
+Trac874.rb
 testMarshal.rb   # after other coverage of Hash
 #
 # PopularApplications loads webrick, etc
