--- a/examples/misc/WebTools/Rakefile
+++ b/examples/misc/WebTools/Rakefile
@@ -3,7 +3,10 @@ task :default => :webtools
 MH = ENV['MAGLEV_HOME']
 
 desc "Run a simple web app to view code and statistics."
-task :webtools do
+task :webtools, :meta do |t, args|
+
+  puts "======== ARGS.meta: #{args.meta}"
+  
   # Load the Smalltalk example code into the MagLev repository, and commit it.
   file = "#{MH}/gemstone/examples/www/install.tpz"
   raise "Can't find #{file}" unless File.exists? file
@@ -15,5 +18,5 @@ task :webtools do
   sh "maglev-ruby -Mcommit #{file}"
 
   # Start the server
-  sh "maglev-ruby -d web_tools.rb"
+  sh "maglev-ruby -d web_tools.rb #{args.meta}"
 end
