--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -369,6 +369,7 @@ Trac861.rb
 Trac862.rb
 Trac871.rb
 Trac874.rb
+Trac878.rb
 testMarshal.rb   # after other coverage of Hash
 #
 # PopularApplications loads webrick, etc
